tests/stderr-snapshots/integration__integration__enums__legal_conflict_used_ambiguously.snap
---
source: tests/integration/enums.rs
expression: stderr
---
error: ambiguous enum const 'Name'
   ┌─ <input>:22:17
   │
22 │         ins_400(Name);
   │                 ^^^^ belongs to multiple enums

error: ambiguous enum const 'Name'
   ┌─ <input>:23:23
   │
23 │         ins_999(@mask=Name, @blob="01000000");
   │                       ^^^^ belongs to multiple enums


